--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - run: flutter pub get
       - run: flutter format --set-exit-if-changed .
       - run: flutter analyze .
-      - run: flutter build apk --split-per-abi --flavor production -t lib/main_production.dart --release
+      - run: flutter build apk --split-per-abi
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
